[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask_server_session"
description = "A quick test of flask server sessions"
dependencies = [
    "Flask",
    "Flask-Session"
]
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]


